--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
         "linebreak-style": "off",
         "comma-dangle": "off",
         "require-jsdoc": "off",
-        "indent": ["error", 4]
+        "indent": ["error", 4],
+        "operator-linebreak": "off"
     },
     "extends": ["eslint:recommended", "google"]
 }
