--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --mode production",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server",
+    "pretty": "prettier --write src/** --check"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "prettier": "^2.5.1",
     "sass": "^1.49.7",
     "sass-loader": "^12.6.0",
     "webpack": "^5.69.0",
