--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
         "comma-dangle": "off",
         "require-jsdoc": "off",
         "indent": ["error", 4],
-        "operator-linebreak": "off"
+        "operator-linebreak": "off",
     },
     "extends": ["eslint:recommended", "google"]
 }
