--- a/.eslintrc
+++ b/.eslintrc
@@ -9,8 +9,9 @@
         "linebreak-style": "off",
         "comma-dangle": "off",
         "require-jsdoc": "off",
-        "indent": ["error", 4],
+        "indent": ["error", 4, { "SwitchCase": 1 }],
         "operator-linebreak": "off",
+        "no-debugger": "off"
     },
     "extends": ["eslint:recommended", "google"]
 }
