--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --mode production",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server",
+    "start": "cross-env NODE_ENV=development webpack-dev-server",
     "pretty": "prettier --write src/** --check"
   },
   "keywords": [],
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "math-expression-evaluator": "^1.3.14",
     "normalize.css": "^8.0.1"
   }
 }
