--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
     "parser": "babel-eslint",
     "env": {
+        "jest": true,
         "es6": true,
         "browser": true,
         "node": true
@@ -12,7 +13,8 @@
         "indent": ["error", 4, { "SwitchCase": 1 }],
         "operator-linebreak": "off",
         "no-debugger": "off",
-        "no-case-declarations": "off"
+        "no-case-declarations": "off",
+        "space-before-function-paren": "off"
     },
     "extends": ["eslint:recommended", "google"]
 }
